fix: overflow hidden

--- a/src/App.scss
+++ b/src/App.scss
@@ -2,7 +2,7 @@
   text-align: center;
   height: 100%;
   width: 100%;
-  overflow-x: scroll;
+  overflow-x: hidden;
 }
 
 .App-header {
